# Curiosity

./: .gitignore  README.md  index.ts  main.py  package-lock.json  package.json  pyproject.toml  test.txt
curiosity/: index.ts  package.json
curiosity/llm/: index.ts
curiosity/minecraft/: __init__.py  bot.py  bot_server.py  protocol.py
curiosity/minecraft/static/: bot.html
curiosity/viewer/: streaming.ts
fabric_server/: eula.txt  server.properties  usercache.json  version_history.json
fabric_server/config/: paper-global.yml  paper-world-defaults.yml
fabric_server/crash-reports/: crash-2025-12-28_17.18.09-server.txt  crash-2025-12-28_17.18.41-server.txt
fabric_server/plugins/.paper-remapped/: index.json
fabric_server/plugins/bStats/: config.yml
fabric_server/world/: level.dat_old
fabric_server/world/advancements/: 3fbd4105-41a0-3cb4-864d-dfa9e11091b8.json  fc417dea-8de9-31af-a6a6-17552d9052c8.json
fabric_server/world/entities/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.-2.0.mca  r.-2.1.mca  r.0.-1.mca  r.0.0.mca
fabric_server/world/playerdata/: 3fbd4105-41a0-3cb4-864d-dfa9e11091b8.dat_old  fc417dea-8de9-31af-a6a6-17552d9052c8.dat_old
fabric_server/world/poi/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.-2.1.mca  r.0.0.mca
fabric_server/world/region/: r.-1.-1.mca  r.-1.0.mca  r.-2.-1.mca  r.-3.0.mca  r.-3.1.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca
fabric_server/world/stats/: 3fbd4105-41a0-3cb4-864d-dfa9e11091b8.json  fc417dea-8de9-31af-a6a6-17552d9052c8.json
minecraft/: eula.txt  server.properties
minecraft/world/: level.dat_old
(+30 files in other folders)
