[project]
name = "curiosity"
version = "0.1.0"
description = "Virtual Minecraft Streaming and Control System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "mss>=10.0.0",
    "pynput>=1.7.7",
    "pillow>=11.0.0",
    "numpy>=2.2.0",
    "aiohttp>=3.11.0",
    "cryptography>=44.0.0",
    "pynbt>=3.1.0",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Quartz>=11.0",
    "pyobjc-framework-ApplicationServices>=11.0",
]

[project.scripts]
minecraft-bot = "curiosity.minecraft.bot:main"
minecraft-bot-server = "curiosity.minecraft.bot_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
