[project]
name = "curiosity"
version = "0.1.0"
description = "Virtual Minecraft Streaming and Control System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "ollama>=0.6.1",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Quartz>=11.0",
    "pyobjc-framework-ApplicationServices>=11.0",
]

[project.scripts]
minecraft-bot = "curiosity.minecraft.bot:main"
minecraft-bot-server = "curiosity.minecraft.bot_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
